--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 [dependencies]
 clap = "4.0.15"
 daemonize = "0.4.1"
+serde = "1.0.145"
+tarpc = { version = "0.30.0", features = ["full"] }
+tokio = { version = "1.21.2", features = ["full"] }
